  (https://bugs.launchpad.net/zope3/+bug/257657).  The change should be
  backward-compatible.  It also will produce slightly smaller pickles for Jobs,
  but that was really not a particular goal.

- Added zc.async.partial.Partial for backward compatibility purposes.

- Fix support for Twisted installed reactor XXX NEEDS TEST

- Fix retry behavior for parallel and serial jobs XXX NEEDS TEST

- tweaked the uuid.txt to mention zdaemon/supervisor rather than Zope 3.

- fixed some bugs in egg creation

1.4.1 (2008-07-30)
==================

- The new ``serial`` and ``parallel`` helpers did not allow the the
  ``postprocess`` argument to be a partial closure, and were being naughty.
  Fixed.

- Added tests and demos for advanced features of ``serial`` and ``parallel``.

- More tweaks to the new Quickstart S5 document.

1.4.0 (2008-07-30)
==================

- Mentioned in ftesting.txt that Zope 3 users should uses zope.app.testing
  3.4.2 or newer.  Also added a summary section at the beginning of that file.

- Added logging of critical messages to __stdout__ for ``ftesting.setUp``.
  This can help discovering problems in callback transactions.  This uses a new
  helper function , ``print_logs``, in zc.async.testing, which is primarily
  intended to be used for quick and dirty debugging

- Changed testing.wait_for_result and testing.wait_for_annotation to ignore
  ReadConflictErrors, so they can be used more reliably in tests that use
  MappingStorage, and other storages without MVCC.

- Support <type 'builtin_function_or_method'> for adaptation to Job.

- Add warning about long commits to tips and tricks.

- After complaining about a polling dispatcher that is deactivated not really
  being dead in the logs, reactivate.

- No longer use intermediate job to implement the success/failure addCallbacks
  behavior.  Introduce an ICallbackProxy that can be used for this kind of
  behavior instead.  This change was driven by two desires.
